[package]
name = "iqengine-fm-receiver-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["macros"] }
http = "0.2.9"
serde = "1.0.190"
serde_derive = "1.0.190"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing-subscriber = "0.3.17"
iqengine-plugin = {path="../iqengine-plugin-rs"}
num-complex = "0.4.4"
futuresdr = { version = "0.0.36", features = ["audio"] }
hound = "3.5.1"
simple_logger = "4.2.0"

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
panic = "abort"